--- a/pom.xml
+++ b/pom.xml
@@ -104,5 +104,10 @@
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.cryptomorin</groupId>
+            <artifactId>XSeries</artifactId>
+            <version>11.2.0</version>
+        </dependency>
     </dependencies>
 </project>
