--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>eu.xap3y</groupId>
   <artifactId>xagui</artifactId>
-  <version>1.1</version>
+  <version>1.2-beta.1</version>
   <packaging>jar</packaging>
     <url>https://xagui.xap3y.eu</url>
   <name>XaGui</name>
